# lidar-visualizations

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  install-deps  install_rplidar  install_sfml  test.cpp  test.sh
.github/: release_base.yml
.github/workflows/: code_style.yml  release_base.yml  release_linux.yml
.metadata/: .log4j.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-co45hd7_32614/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-co45hd7_32614/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-co45hd7_32614/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
clouds/: c0a.txt  cdebug.txt
datasets/: 11.12.2020-02.42.24-cloud-ser-cyl.txt  c1b.txt  c1c.txt  c2a.txt  c3.txt  cdebug2.txt  choles.txt  cube.txt  example-series.txt  example.txt  knei-1b.txt  knei-2.txt  knei-3b.txt
datasets/series/: debug-okrag.txt
lidar/: Makefile  app.cpp  app.h  characters.h  cloud-grabbers.cpp  cloud-grabbers.h  cloud-writers.cpp  cloud-writers.h  cloud.cpp  cloud.h  communication.cpp  communication.h  guis.cpp  guis.h  lidar  lidar.cpp  lidar.h  lidar.vcxproj  lidar.vcxproj.filters  main.cpp  rplidar-sdk-debug.props  rplidar-sdk-release.props  rplidar.props  save_series_scenario.cpp  scenarios.cpp  scenarios.h  sfml-debug.props  sfml-release.props
src/: app.cpp  cloud-grabbers.cpp  cloud-grabbers.h  cloud-writers.cpp  cloud-writers.h  cloud.cpp  cloud.h  guis.cpp  guis.h  scenarios.cpp  scenarios.h
stm32-discovery/: .cproject  .mxproject  .project  disp3.ioc  disp5.ioc
stm32-discovery/Core/Inc/: FreeRTOSConfig.h  lidar.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
stm32-discovery/Core/Src/: freertos.c  gpio.c  lidar.cpp  lidar.h  main.cpp  stm32f7xx_hal_msp.c  stm32f7xx_it.c
stm32-discovery/workspace/disp5/: .cproject  .mxproject  disp5.ioc
stm32-discovery/workspace/disp5/Core/Inc/: dma.h  lidar.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h  usart.h
stm32-discovery/workspace/disp5/Core/Src/: dma.c  dma2d.c  fmc.c  lidar.cpp  ltdc.c  main.cpp  quadspi.c  sdmmc.c  spi.c  stm32f7xx_it.c  tim.c  usart.c
vs/: lidar.vcxproj  lidar.vcxproj.filters  sfml-debug.props  sfml-release.props
